--- a/BTCK.css
+++ b/BTCK.css
@@ -201,3 +201,9 @@ ul li {
     padding-top: 4px;
     margin-right: 10px;
 }
+.form-map{
+    border: #c79c60 1px solid;
+    border-radius: 5px;
+    padding: 0px;
+    overflow: hidden;
+}
